@@ -1,4 +1,15 @@
- /* $Id: changelog,v 1.656 2000-01-17 17:19:44 sandervl Exp $ */
+ /* $Id: changelog,v 1.657 2000-01-18 20:23:08 sandervl Exp $ */
+
+ 2000-01-18: Sander van Leeuwen <sandervl@xs4all.nl>
+	- USER32: Removed 'old' user32 and replaced it with the new one
+                  Call default window proc when DefMDIChildProcA/W is called
+                  for a non-MDI window.
+
+ 2000-01-18: Jens Wiessner <wiessnej@rfi.de>
+	- WINMM\WAVEMAP
+	  Updated to Wine level 20000109 + corrected compile
+	- MCICDA: ported MCICDA.DLL from Wine 20000901 (Linux cdrom calls stubbed
+                  so it doesn't work)
 
  2000-01-17: Sander van Leeuwen <sandervl@xs4all.nl>
 	- USER32\NEW: Added basic support for DInput WM_CHAR notification
